--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "client": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "node server/index.js"
+    "server": "node api/index.js"
   },
   "dependencies": {
     "@google/genai": "^1.40.0",
@@ -17,7 +17,10 @@
     "lucide-react": "^0.563.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
